# CPPChecker

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: CPPChecker.yml  Catach2_Tests.yml  Catch2_Tests.yml  Catch2_UT_header.yml  catch2_tests.yml
CPPChecker/: CPPChecker.cpp
CPPChecker/As header/: cppchecker.hpp
CPPChecker/As header/Catch2_Tests/: catch_main.cpp  test.cpp
CPPChecker/As header/Macros/: class_handling.hpp  class_member_check.hpp  class_member_t_check.hpp  free_function_t_check.hpp  free_variable_t_check.hpp  m_fallbacks.hpp  m_output.hpp  main_process.hpp
CPPChecker/As_header/: cppchecker.hpp  cppchecker_fulloutput.hpp
CPPChecker/As_header/Catch2_Tests/: UT_cppchecker_hpp.cpp  catch_main.cpp  old_UT_cppchecker_hpp.cpp
CPPChecker/As_header/Macros/: class_member_t_check.hpp  free_function_t_check.hpp  free_variable_t_check.hpp  m_fallbacks.hpp  m_output.hpp  main_process.hpp
CPPChecker/Uni_Demo/: Makefile  Students_Results.txt  Super_Brain_Program.cpp  V2_Super_Brain_Program.cpp  students_code.cpp
CPPChecker/Uni_Demo/Headers/: cppchecker.hpp  pch_uni.hpp
CPPChecker/Uni_Demo/Headers_v2/: cppchecker_mod.cpp
CPPChecker/Uni_Demo_2/: Makefile  V2_Super_Brain_Program.cpp
CPPChecker/Uni_Demo_2/Headers/: cppchecker.hpp  (+1 more)
CPPChecker/Uni_Demo_2v1/: .gitignore  Makefile  Names.txt  SBProgram.cpp
include/: catch.hpp  cxxchecker.hpp  cxxchecker_reflection.hpp
src/legacy/: UT_cppchecker_hpp.cpp  cppchecker.hpp  old_cppchecker.hpp
src/research/: Makefile  TEST.cpp  is_output_same.cpp  reflection_01.cpp  reflection_02.cpp  reflection_03.cpp  reflection_class_has_memberfunc.cpp  reflection_class_has_protected_memberfunc.cpp  reflection_class_has_public_memberfunc.cpp  reflection_class_has_static_memberfunc.cpp  reflection_has_free_function.cpp  reflection_has_free_function_copy.cpp  reflection_has_free_static_function.cpp  reflection_has_free_static_function_copy.cpp  reflection_has_free_static_variable.cpp  reflection_has_free_variable.cpp  reflection_has_free_variable_copy.cpp  relection_class.cpp  relection_class_has_membervar.cpp  relection_class_has_static_member.cpp  testing_01.cpp  testing_02.cpp  testing_03.cpp  testing_04.cpp  testing_05.cpp  testing_06.cpp
test/unit/: catch2_cxxchecker_hpp.cpp  example_code.cpp
(+27 files in other folders)
