cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 20)
project(CMake_Catch2Test)
add_executable(Main main.cpp)
add_library(CPPChecker CPPChecker/CPPChecker.cpp)
target_include_directories(Main PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/CPPChecker)
target_link_libraries(Main PRIVATE CPPChecker)
add_executable(catch2_test CPPChecker/As_header/catch2_Tests/test.cpp)
target_include_directories(catch2_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/CPPChecker)
target_link_libraries(catch2_test PRIVATE CPPChecker)
enable_testing()
add_test(NAME Catch2Tests COMMAND catch2_test)
